@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/imagemagick
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.380 2010/01/30 17:36:45 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.381 2010/02/11 20:23:27 jer Exp $
+
+  11 Feb 2010; Jeroen Roovers <jer@gentoo.org> imagemagick-6.5.7.0.ebuild:
+  Stable for HPPA (bug #291696).
 
   30 Jan 2010; Markus Meier <maekke@gentoo.org> imagemagick-6.5.8.8.ebuild:
   replace built_with_use with has_version by Gordon Malm in bug #302145
