@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/autotrace
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/autotrace/ChangeLog,v 1.34 2009/12/09 20:38:45 ranger Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/autotrace/ChangeLog,v 1.35 2010/02/11 20:22:36 jer Exp $
+
+  11 Feb 2010; Jeroen Roovers <jer@gentoo.org> autotrace-0.31.1-r3.ebuild:
+  Stable for HPPA (bug #291696).
 
   09 Dec 2009; Brent Baude <ranger@gentoo.org> autotrace-0.31.1-r3.ebuild:
   Marking autotrace-0.31.1-r3 ppc64 for bug 291696
